# oxide9

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENCE  README.md  makefile
assets/config/: oxide9.toml
assets/tests/: move_generator_tests.json
lichess-bot/: Dockerfile  config.yml
scripts/: cute.sh  install-dev.sh  install.sh
src/: analyze.rs  bench.rs  bitboard.rs  chess.rs  config.rs  coordinates.rs  depth.rs  eval.rs  lib.rs  main.rs  move.rs  move_gen.rs  notation.rs  options.rs  perft.rs  piece.rs  position.rs  search.rs  time.rs  tt.rs  uci.rs  zobrist.rs
src/chess/: bitboard.rs  coordinates.rs  move.rs  move_gen.rs  piece.rs  position.rs
src/chess/move_gen/: attacks.rs  generation.rs
src/move_gen/: attacks.rs  generation.rs  move_generator.rs  move_list.rs
tests/: move_generator_tests.rs
