[package]
name = "oxide9"
version = "0.1.0"
authors = ["Mathieu Pagé"]
edition = "2021"

[[test]]
name = "move_generator_tests"
path = "tests/move_generator_tests.rs"
harness = false

[dependencies]
bitflags = "2.8.0"
clap = { version = "4.5.32", features = ["derive"] }
thiserror = "2.0.11"

[dev-dependencies]
colored = "3.0.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
ctor = "0.4.1"

[profile.release]
lto = true               # Enable link-time optimization
codegen-units = 1        # Maximize optimizations, slower compilation

[profile.flamegraph]
inherits = "release"
debug = true
