[package]
name = "oxide9"
version = "0.1.0"
authors = ["Mathieu Pagé"]
edition = "2021"

[[bin]]
name = "oxide9"
path = "src/main.rs"

[[test]]
name = "move_generator_tests"
path = "tests/move_generator_tests.rs"
harness = false

[dependencies]
bitflags = "2.8.0"
clap = { version = "4.5.32", features = ["derive"] }
thiserror = "2.0.11"
serde = { version = "1.0.218", features = ["derive"] }
human-repr = "1.1.0"
terminal_size = "0.4.2"
regex = "1.11.1"
rand = "0.9.0"
ctrlc = "3.4.6"

[dev-dependencies]
colored = "3.0.0"
serde_json = "1.0.139"
ctor = "0.4.1"

[profile.release]
lto = true               # Enable link-time optimization
debug = false
codegen-units = 1        # Maximize optimizations, slower compilation

[profile.flamegraph]
inherits = "release"
debug = true
